--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,13 @@ services:
     image: postgres
     ports:
       - 5432:5432
+    volumes:
+      - ./resources/sql/:docker-entrypoint-initdb.d/
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: dividends_db
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
